fixed top margin on mobile

--- a/print-portal/src/styles/cover.scss
+++ b/print-portal/src/styles/cover.scss
@@ -8,7 +8,6 @@
             width:100%;
             max-height: 75px;
             background-color:#fff;
-            margin-top: -1px;
             h1 {
                 flex-grow:2;
             }
@@ -21,5 +20,3 @@
 #modal__body.sticky {
         margin-top:91px;
     }
-
-
